--- a/src/include/base.scss
+++ b/src/include/base.scss
@@ -18,6 +18,10 @@ a{
     text-decoration: none;
 }
 
+*{
+  box-sizing: border-box;
+}
+
 /*
 常用属性简写定义
 =========================================================
