--- a/src/include/reset.css
+++ b/src/include/reset.css
@@ -52,11 +52,10 @@ sub {
     vertical-align: text-bottom
 }
 
-input, textarea, select {
+input, textarea, select,button {
     font-family: inherit;
     font-size: inherit;
     font-weight: inherit;
-    *font-size: 100%
 }
 
 legend {
@@ -66,3 +65,4 @@ legend {
 i,b{
     font-style: normal;
 }
+
