--- a/src/include/font.scss
+++ b/src/include/font.scss
@@ -130,6 +130,6 @@ t    为前缀；
 -r1  字体颜色   r: red; b: blue; y: yellow; g: green; w: white; k: black; a: gray;
 */
 
-.fz-s{
+.fz-small{
     font-size:0.8em;
 }
