--- a/src/include/base.scss
+++ b/src/include/base.scss
@@ -10,9 +10,9 @@ body{
     line-height: 1.4;
     overflow-x:hidden;
 }
-input{
-    -webkit-appearance: none; /*去除浏览器默认样式*/
-}
+/*input{
+    -webkit-appearance: none; *//*去除浏览器默认样式*//*
+}*/
 
 a{
     text-decoration: none;
