--- a/src/include/extend.scss
+++ b/src/include/extend.scss
@@ -1,5 +1,16 @@
 /*    define extend
 ==========================================================*/
+
+.select-none{
+  -moz-user-select: none; /*火狐*/
+  -webkit-user-select: none; /*webkit浏览器*/
+  -ms-user-select: none; /*IE10*/
+  -khtml-user-select: none; /*早期浏览器*/
+  user-select: none;
+}
+
+
+
 .__flex{
   @include css3flex;
 }
