--- a/src/include/mixins.scss
+++ b/src/include/mixins.scss
@@ -15,6 +15,15 @@
   flex: $radio;
 }
 
+@mixin flex-auto() {
+  -webkit-box-flex: 1 auto;
+  -webkit-flex: 1 auto;
+  flex: 1 auto;
+  -webkit-box-flex: 1;
+  -webkit-flex: auto;
+  flex: auto;
+}
+
 
 @mixin fz($fz:16rem){
   font-size:$fz/$fzBase;
