--- a/src/include/extend.scss
+++ b/src/include/extend.scss
@@ -9,8 +9,14 @@
   user-select: none;
 }
 
-.__flex{
+.__flex, .flex{
   @include css3flex;
+}
+
+.flex-1{
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
 }
 
 .flex-middle{
