--- a/src/include/mixins.scss
+++ b/src/include/mixins.scss
@@ -30,6 +30,7 @@
   flex: auto;
 }
 
+//处理android兼容
 @mixin flex-1() {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -73,4 +74,14 @@
   overflow-y: scroll;
   touch-action: pan-y;
   -webkit-overflow-scrolling: touch;
+}
+
+@mixin line-clamp($line:2){
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  //-webkit-flex-direction:column;
+  //flex-direction:column;
+  overflow : hidden;
+  text-overflow: ellipsis;
 }
