--- a/src/include/mixins.scss
+++ b/src/include/mixins.scss
@@ -78,7 +78,7 @@
 
 @mixin line-clamp($line:2){
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: $line;
   -webkit-box-orient: vertical;
   //-webkit-flex-direction:column;
   //flex-direction:column;
