--- a/src/basic.scss
+++ b/src/basic.scss
@@ -1,13 +1,4 @@
-/*!
- * scss scaffold basic by Julien.
- * https://github.com/julienedies/basic.git
- * https://github.com/Julienedies/basic/wiki
- */
+@charset "utf-8";
 
-@import url('include/var.scss?__inline');
-@import url('include/mixins.scss?__inline');
-@import url('include/extend.scss?__inline');
-@import url('include/font.scss?__inline');
-@import url('include/reset.css?__inline');
-@import url('include/base.scss?__inline');
-@import url('include/components.scss?__inline');
+@import "mixins/layout.scss";
+@import "extend/layout.scss";
