--- a/src/extend/layout.scss
+++ b/src/extend/layout.scss
@@ -1,16 +1,7 @@
-/*    define extend
-==========================================================*/
-
-.select-none{
-  -moz-user-select: none; /*火狐*/
-  -webkit-user-select: none; /*webkit浏览器*/
-  -ms-user-select: none; /*IE10*/
-  -khtml-user-select: none; /*早期浏览器*/
-  user-select: none;
-}
+@import "../mixins/layout.scss";
 
 .__flex, .flex{
-  @include css3flex;
+  @include flex;
 }
 
 .flex-1{
