--- a/src/mixins/layout.scss
+++ b/src/mixins/layout.scss
@@ -29,6 +29,19 @@
   flex: 1;
 }
 
+@mixin flex-middle(){
+  @include flex();
+  -webkit-box-align:center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+@mixin flex-right(){
+  @include flex();
+  -webkit-box-pack:end;
+  -webkit-justify-content:flex-end;
+  justify-content:flex-end;
+}
 
 
 
